// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`init wizard bootstraps a scaffold with demo DDL 1`] = `
"ZTD project initialized.

Created:
 - ztd/ddl/public.sql
 - ztd.config.json
 - README.md
 - ztd/README.md
 - src/sql/README.md
 - src/repositories/views/README.md
 - src/repositories/tables/README.md
 - src/jobs/README.md
 - src/catalog/specs/_smoke.spec.ts
 - src/catalog/runtime/_coercions.ts
 - src/catalog/runtime/_smoke.runtime.ts
 - tests/smoke.validation.test.ts
 - tests/smoke.test.ts
 - tests/queryspec.example.test.ts
 - src/db/sql-client.ts
 - src/db/sql-client-adapters.ts
 - src/infrastructure/telemetry/types.ts
 - src/infrastructure/telemetry/consoleRepositoryTelemetry.ts
 - src/infrastructure/telemetry/repositoryTelemetry.ts
 - tests/support/testkit-client.ts
 - tests/support/global-setup.ts
 - vitest.config.ts
 - tsconfig.json
 - .gitignore
 - .editorconfig
 - .prettierignore
 - .prettierrc
 - package.json

Validation configuration:
 - SQL catalog/mapping support via @rawsql-ts/sql-contract (see docs/recipes/sql-contract.md)
 - Validator backend: Zod (zod, docs/recipes/validation-zod.md)

Next steps:
 1. If the schema file is empty, edit ztd/ddl/public.sql before generating downstream artifacts
 2. Add or edit your first SQL asset under src/sql/ so the happy path starts from a human-maintained query file
 3. Run npx ztd ztd-config to regenerate DDL-derived test rows and layout metadata
 4. Run npx ztd model-gen --probe-mode ztd <sql-file> --out <spec-file> to scaffold a QuerySpec from that SQL file
 5. Review src/db/sql-client.ts and src/infrastructure/telemetry/repositoryTelemetry.ts so the first SQL-backed repository has a seam to plug into
 6. Open tests/queryspec.example.test.ts as the QuerySpec-first sample before you write the first repository test
 7. Run tests (npm run test or npx vitest run) to pass the generated smoke test before adding SQL-backed coverage

If this fails:
 - If npx ztd ztd-config fails, keep editing ztd/ddl/public.sql and src/sql/ first, then rerun generation after the DDL is ready
 - If npx ztd model-gen fails, keep the SQL file and rerun it after npx ztd ztd-config succeeds; the ztd probe path does not need DATABASE_URL
 - If you do not have ZTD_TEST_DATABASE_URL yet, use the generated smoke test as the first DB-free pass and wait to add SQL-backed tests until the connection is ready"
`;

exports[`init wizard bootstraps an empty scaffold 1`] = `
"ZTD project initialized.

Created:
 - ztd/ddl/public.sql
 - ztd.config.json
 - README.md
 - ztd/README.md
 - src/sql/README.md
 - src/repositories/views/README.md
 - src/repositories/tables/README.md
 - src/jobs/README.md
 - src/catalog/specs/_smoke.spec.ts
 - src/catalog/runtime/_coercions.ts
 - src/catalog/runtime/_smoke.runtime.ts
 - tests/smoke.validation.test.ts
 - tests/smoke.test.ts
 - tests/queryspec.example.test.ts
 - src/db/sql-client.ts
 - src/db/sql-client-adapters.ts
 - src/infrastructure/telemetry/types.ts
 - src/infrastructure/telemetry/consoleRepositoryTelemetry.ts
 - src/infrastructure/telemetry/repositoryTelemetry.ts
 - tests/support/testkit-client.ts
 - tests/support/global-setup.ts
 - vitest.config.ts
 - tsconfig.json
 - .gitignore
 - .editorconfig
 - .prettierignore
 - .prettierrc
 - package.json

Validation configuration:
 - SQL catalog/mapping support via @rawsql-ts/sql-contract (see docs/recipes/sql-contract.md)
 - Validator backend: Zod (zod, docs/recipes/validation-zod.md)

Next steps:
 1. If the schema file is empty, edit ztd/ddl/public.sql before generating downstream artifacts
 2. Add or edit your first SQL asset under src/sql/ so the happy path starts from a human-maintained query file
 3. Run npx ztd ztd-config to regenerate DDL-derived test rows and layout metadata
 4. Run npx ztd model-gen --probe-mode ztd <sql-file> --out <spec-file> to scaffold a QuerySpec from that SQL file
 5. Review src/db/sql-client.ts and src/infrastructure/telemetry/repositoryTelemetry.ts so the first SQL-backed repository has a seam to plug into
 6. Open tests/queryspec.example.test.ts as the QuerySpec-first sample before you write the first repository test
 7. Run tests (npm run test or npx vitest run) to pass the generated smoke test before adding SQL-backed coverage

If this fails:
 - If npx ztd ztd-config fails, keep editing ztd/ddl/public.sql and src/sql/ first, then rerun generation after the DDL is ready
 - If npx ztd model-gen fails, keep the SQL file and rerun it after npx ztd ztd-config succeeds; the ztd probe path does not need DATABASE_URL
 - If you do not have ZTD_TEST_DATABASE_URL yet, use the generated smoke test as the first DB-free pass and wait to add SQL-backed tests until the connection is ready"
`;

exports[`init wizard pulls schema if pg_dump is available 1`] = `
"ZTD project initialized.

Created:
 - ztd/ddl/public.sql
 - ztd.config.json
 - README.md
 - ztd/README.md
 - src/sql/README.md
 - src/repositories/views/README.md
 - src/repositories/tables/README.md
 - src/jobs/README.md
 - src/catalog/specs/_smoke.spec.ts
 - src/catalog/runtime/_coercions.ts
 - src/catalog/runtime/_smoke.runtime.ts
 - tests/smoke.validation.test.ts
 - tests/smoke.test.ts
 - tests/queryspec.example.test.ts
 - src/db/sql-client.ts
 - src/db/sql-client-adapters.ts
 - src/infrastructure/telemetry/types.ts
 - src/infrastructure/telemetry/consoleRepositoryTelemetry.ts
 - src/infrastructure/telemetry/repositoryTelemetry.ts
 - tests/support/testkit-client.ts
 - tests/support/global-setup.ts
 - vitest.config.ts
 - tsconfig.json
 - .gitignore
 - .editorconfig
 - .prettierignore
 - .prettierrc
 - package.json

Validation configuration:
 - SQL catalog/mapping support via @rawsql-ts/sql-contract (see docs/recipes/sql-contract.md)
 - Validator backend: Zod (zod, docs/recipes/validation-zod.md)

Next steps:
 1. Review the dumped DDL in ztd/ddl/public.sql and adjust it before generating downstream artifacts
 2. Add or edit your first SQL asset under src/sql/ so the happy path starts from a human-maintained query file
 3. Run npx ztd ztd-config to regenerate DDL-derived test rows and layout metadata
 4. Run npx ztd model-gen --probe-mode ztd <sql-file> --out <spec-file> to scaffold a QuerySpec from that SQL file
 5. Review src/db/sql-client.ts and src/infrastructure/telemetry/repositoryTelemetry.ts so the first SQL-backed repository has a seam to plug into
 6. Open tests/queryspec.example.test.ts as the QuerySpec-first sample before you write the first repository test
 7. Run tests (npm run test or npx vitest run) to pass the generated smoke test before adding SQL-backed coverage

If this fails:
 - If npx ztd ztd-config fails, keep editing ztd/ddl/public.sql and src/sql/ first, then rerun generation after the DDL is ready
 - If npx ztd model-gen fails, keep the SQL file and rerun it after npx ztd ztd-config succeeds; the ztd probe path does not need DATABASE_URL
 - If you do not have ZTD_TEST_DATABASE_URL yet, use the generated smoke test as the first DB-free pass and wait to add SQL-backed tests until the connection is ready"
`;
